k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: image: us-central1-docker.pkg.dev/amiable-archive-473111-d4/my-repo/notes-frontend:latest
        ports:
        - containerPort: 3000
